--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node. /server.js",
-    "dev": "nodemon ./server.js"
+    "dev": "nodemon ./server.js",
+    "dataUsers" : "node ./models/data/usersData.js",
+    "dataAuthors": "node ./models/data/authorsData.js",
+    "dataCategories": "node ./models/data/categoriesData.js",
+    "dataMangas": " node ./models/data/mangasData.js",
+    "dataChapters": "node ./models/data/chaptersData.js"
   },
   "repository": {
     "type": "git",
