--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node. /server.js",
+    "start": "node ./server.js",
     "dev": "nodemon ./server.js",
     "dataUsers" : "node ./models/data/usersData.js",
     "dataAuthors": "node ./models/data/authorsData.js",
     "dataCategories": "node ./models/data/categoriesData.js",
     "dataMangas": " node ./models/data/mangasData.js",
-    "dataChapters": "node ./models/data/chaptersData.js"
+    "dataChapters": "node ./models/data/chaptersData.js",
+    "dataMangasChapters" : "node ./models/data/mangasWhitChapters.js"
   },
   "repository": {
     "type": "git",
