--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dataMangasChapters" : "node ./models/data/mangasWhitChapters.js",
     "dataCompanies" : "node ./models/data/companiesData.js",
     "dataComments" : "node ./models/data/commentsData.js",
-    "dataReactions" : "node ./models/data/reactionsData.js"
+    "dataReactions" : "node ./models/data/reactionsData.js",
+    "dataFavorites" :"node ./models/data/favoritesData.js"
   },
   "repository": {
     "type": "git",
